--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="title_activity_friend_selector_view">FriendSelectorView</string>
     <string name="title_activity_finish_job">FinishJob</string>
     <string name="title_activity_fake_logout">FakeLogout</string>
+    <string name="title_activity_welcome">Welcome</string>
 </resources>
